--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
 	"functions": {
-		"api/**/*.[jt]sx?": { "runtime": "vercel-deno@3.1.0" }
+		"api/**/*.[jt]s": { "runtime": "vercel-deno@3.1.0" }
 	}
 }
